--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   sizer: ^2.0.15
   flutter_riverpod: ^1.0.4
   flutter_hex_color: ^2.0.0
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
