--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shimmer: ^2.0.0
   auto_size_text: ^3.0.0
   flame_audio: ^1.0.2
+  flame_forge2d: ^0.11.0
 
 dev_dependencies:
   flutter_test:
@@ -54,8 +55,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
-
 
 # The following section is specific to Flutter packages.
 flutter:
