--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shimmer: ^2.0.0
   auto_size_text: ^3.0.0
   flame_audio: ^1.0.2
+  flame_forge2d: ^0.12.0
 
 dev_dependencies:
   flutter_test:
